--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.24.79",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-sass": "^2.3.19",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-remark-images": "^3.3.39",
