--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "gatsby-plugin-sass": "^2.3.19",
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-remark-images": "^3.3.39",
+    "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-remark": "^2.8.45",
     "gatsby-transformer-sharp": "^2.5.20",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.23.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
