--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sass": "^2.3.19",
     "gatsby-plugin-sharp": "^2.6.43",
