--- a/package.json
+++ b/package.json
@@ -14,26 +14,28 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.24.79",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-google-analytics": "^2.4.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^4.1.2",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^4.9.0",
+    "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.3.19",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-remark-images": "^3.3.39",
-    "gatsby-remark-prismjs": "^3.11.0",
-    "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-remark-images": "^6.1.1",
+    "gatsby-remark-prismjs": "^6.6.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-remark": "^2.8.45",
-    "gatsby-transformer-sharp": "^2.5.20",
-    "node-sass": "^4.14.1",
-    "prismjs": "^1.23.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-json": "^4.0.0",
+    "gatsby-transformer-remark": "^5.1.1",
+    "gatsby-transformer-sharp": "^4.9.0",
+    "gbimage-bridge": "^0.2.1",
+    "node-sass": "^6.0.1",
+    "prismjs": "^1.26.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
