--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-helmet": "^6.1.5",
     "env-cmd": "^10.1.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "typescript": "^4.6.3"
   },
   "repository": {
     "type": "git",
