--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^6.1.1",
     "gatsby-remark-prismjs": "^6.6.0",
     "gatsby-remark-relative-images": "^2.0.2",
