--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -20,6 +21,7 @@
     "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-preload-fonts": "^3.22.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.9.0",
