--- a/serverless/template.yaml
+++ b/serverless/template.yaml
@@ -14,6 +14,11 @@ Globals:
         Environment:
             Variables:
                 TABLE_NAME: !Ref DynamoDBTable
+    Api:
+        Cors:
+            AllowMethods: "'GET,POST,OPTIONS'"
+            AllowHeaders: "'content-type'"
+            AllowOrigin: "'*'"
 
 Resources:
     GetBlogsFunction:
