--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.12",
+    "axios": "^1.3.4",
     "dotenv": "^10.0.0",
     "gatsby": "^4.11.1",
     "gatsby-plugin-google-gtag": "^4.9.0",
