--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -144,7 +144,7 @@ jobs:
                   use-installer: true
             - uses: actions/download-artifact@v2
               with:
-                  name: packaged-testing.yaml
+                  name: serverless/packaged-testing.yaml
 
             - name: Assume the testing pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
