--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -143,9 +143,8 @@ jobs:
               with:
                   use-installer: true
             - uses: actions/download-artifact@v2
-              with:
-                  name: packaged-testing.yaml
-                  path: serverless/packaged-testing.yaml
+            #   with:
+            #       name: packaged-testing.yaml
 
             - name: Assume the testing pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
