amend artifact path

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,8 +1,8 @@
 name: Pipeline
 
-# defaults:
-#     run:
-#         working-directory: serverless
+defaults:
+    run:
+        working-directory: serverless
 
 on:
     push:
@@ -145,6 +145,7 @@ jobs:
             - uses: actions/download-artifact@v2
               with:
                   name: packaged-testing.yaml
+                  path: packaged-testing.yaml
 
             - name: Assume the testing pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
