--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -108,7 +108,7 @@ jobs:
             - uses: actions/upload-artifact@v2
               with:
                   name: packaged-testing.yaml
-                  path: packaged-testing.yaml
+                  path: serverless/packaged-testing.yaml
 
             - name: Assume the prod pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
@@ -145,7 +145,7 @@ jobs:
             - uses: actions/download-artifact@v2
               with:
                   name: packaged-testing.yaml
-                  path: packaged-testing.yaml
+                  path: serverless/packaged-testing.yaml
 
             - name: Assume the testing pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
