--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -74,7 +74,7 @@ jobs:
                     --no-fail-on-empty-changeset \
                     --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE}
 
-    build-and-package:
+    build-and-deploy-production:
         if: github.ref == 'refs/heads/main'
         needs: [test]
         runs-on: ubuntu-latest
@@ -83,115 +83,7 @@ jobs:
             - uses: aws-actions/setup-sam@v2
               with:
                   use-installer: true
-
-            - name: Build resources
-              run: sam build --template ${SAM_TEMPLATE} --use-container
-
-            - name: Assume the testing pipeline user role
-              uses: aws-actions/configure-aws-credentials@v1-node16
-              with:
-                  aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-                  aws-region: ${{ env.TESTING_REGION }}
-                  role-to-assume: ${{ env.TESTING_PIPELINE_EXECUTION_ROLE }}
-                  role-session-name: testing-packaging
-                  role-duration-seconds: 3600
-                  role-skip-session-tagging: true
-
-            - name: Upload artifacts to testing artifact buckets
-              run: |
-                  sam package \
-                    --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
-                    --region ${TESTING_REGION} \
-                    --output-template-file packaged-testing.yaml
-
-            - uses: actions/upload-artifact@v2
-              with:
-                  name: packaged-testing.yaml
-                  path: serverless/packaged-testing.yaml
-
-            - name: Assume the prod pipeline user role
-              uses: aws-actions/configure-aws-credentials@v1-node16
-              with:
-                  aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-                  aws-region: ${{ env.PROD_REGION }}
-                  role-to-assume: ${{ env.PROD_PIPELINE_EXECUTION_ROLE }}
-                  role-session-name: prod-packaging
-                  role-duration-seconds: 3600
-                  role-skip-session-tagging: true
-
-            - name: Upload artifacts to production artifact buckets
-              run: |
-                  sam package \
-                    --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
-                    --region ${PROD_REGION} \
-                    --output-template-file packaged-prod.yaml
-
-            - uses: actions/upload-artifact@v2
-              with:
-                  name: packaged-prod.yaml
-                  path: serverless/packaged-prod.yaml
-
-    deploy-testing:
-        if: github.ref == 'refs/heads/main'
-        needs: [build-and-package]
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: aws-actions/setup-sam@v2
-              with:
-                  use-installer: true
-            - uses: actions/download-artifact@v2
-              with:
-                  name: packaged-testing.yaml
-                  path: serverless/packaged-testing.yaml
-
-            - name: Assume the testing pipeline user role
-              uses: aws-actions/configure-aws-credentials@v1-node16
-              with:
-                  aws-access-key-id: ${{ env.PIPELINE_USER_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
-                  aws-region: ${{ env.TESTING_REGION }}
-                  role-to-assume: ${{ env.TESTING_PIPELINE_EXECUTION_ROLE }}
-                  role-session-name: testing-deployment
-                  role-duration-seconds: 3600
-                  role-skip-session-tagging: true
-
-            - name: Deploy to testing account
-              run: |
-                  sam deploy --stack-name ${TESTING_STACK_NAME} \
-                    --template serverless/packaged-testing.yaml \
-                    --capabilities CAPABILITY_IAM \
-                    --region ${TESTING_REGION} \
-                    --s3-bucket ${TESTING_ARTIFACTS_BUCKET} \
-                    --no-fail-on-empty-changeset \
-                    --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE}
-
-    integration-test:
-        if: github.ref == 'refs/heads/main'
-        needs: [deploy-testing]
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - run: |
-                  # trigger the integration tests here
-
-    deploy-prod:
-        if: github.ref == 'refs/heads/main'
-        needs: [integration-test]
-        runs-on: ubuntu-latest
-        # Configure GitHub Action Environment to have a manual approval step before deployment to production
-        # https://docs.github.com/en/actions/reference/environments
-        # environment: <configured-environment>
-        steps:
-            - uses: actions/checkout@v3
-            - uses: aws-actions/setup-sam@v2
-              with:
-                  use-installer: true
-            - uses: actions/download-artifact@v2
-              with:
-                  name: packaged-prod.yaml
+            - run: sam build --template ${SAM_TEMPLATE} --use-container
 
             - name: Assume the prod pipeline user role
               uses: aws-actions/configure-aws-credentials@v1-node16
@@ -207,9 +99,9 @@ jobs:
             - name: Deploy to production account
               run: |
                   sam deploy --stack-name ${PROD_STACK_NAME} \
-                    --template packaged-prod.yaml \
-                    --capabilities CAPABILITY_IAM \
-                    --region ${PROD_REGION} \
-                    --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
-                    --no-fail-on-empty-changeset \
-                    --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE}
+                  --template packaged-prod.yaml \
+                  --capabilities CAPABILITY_IAM \
+                  --region ${PROD_REGION} \
+                  --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
+                  --no-fail-on-empty-changeset \
+                  --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE}
