--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -206,7 +206,7 @@ jobs:
             - name: Deploy to production account
               run: |
                   sam deploy --stack-name ${PROD_STACK_NAME} \
-                    --template packaged-prod.yaml \
+                    --template ../packaged-prod.yaml \
                     --capabilities CAPABILITY_IAM \
                     --region ${PROD_REGION} \
                     --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
