--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,7 +8,7 @@ on:
     push:
         branches:
             - "main"
-            - "feature**"
+            - "staging"
 
 env:
     PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.PIPELINE_USER_ACCESS_KEY_ID }}
@@ -43,10 +43,6 @@ jobs:
                   # trigger the tests here
 
     build-and-deploy-staging:
-        # this stage is triggered only for feature branches (feature*),
-        # which will build the stack and deploy to a stack named with branch name.
-        # https://github.com/actions/setup-python
-        # https://github.com/aws-actions/configure-aws-credentials#notice-node12-deprecation-warning
         if: github.ref == 'refs/heads/staging'
         needs: [test]
         runs-on: ubuntu-latest
@@ -64,11 +60,11 @@ jobs:
                   aws-secret-access-key: ${{ env.PIPELINE_USER_SECRET_ACCESS_KEY }}
                   aws-region: ${{ env.STAGING_REGION }}
                   role-to-assume: ${{ env.STAGING_PIPELINE_EXECUTION_ROLE }}
-                  role-session-name: feature-deployment
+                  role-session-name: staging-deployment
                   role-duration-seconds: 3600
                   role-skip-session-tagging: true
 
-            - name: Deploy to feature stack in the staging account
+            - name: Deploy to staging stack in the staging account
               shell: bash
               run: |
                   sam deploy --stack-name $(echo ${GITHUB_REF##*/} | tr -cd '[a-zA-Z0-9-]') \
