--- a/serverless/package.json
+++ b/serverless/package.json
@@ -8,6 +8,7 @@
     "license": "MIT",
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.241.0",
+        "@aws-sdk/client-ssm": "^3.288.0",
         "@google-analytics/data": "^3.2.1",
         "crypto": "^1.0.1",
         "esbuild": "^0.16.12",
