run pipeline only for serverless folder

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,6 +9,8 @@ on:
         branches:
             - "main"
             - "staging"
+        paths:
+            - "serverless/**"
 
 env:
     PIPELINE_USER_ACCESS_KEY_ID: ${{ secrets.PIPELINE_USER_ACCESS_KEY_ID }}
