--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -39,7 +39,8 @@
         "prismjs": "^1.26.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-helmet": "^6.1.0"
+        "react-helmet": "^6.1.0",
+        "react-intl": "^6.4.2"
     },
     "devDependencies": {
         "@types/node": "^20.2.1",
